# lc-rackmac

./: LICENSE  README.md
code/: CMakeLists.txt  sdkconfig  sdkconfig.old
code/main/: CMakeLists.txt  beep.c  beep.h  buffer_pool.c  buffer_pool.h  ethernet.c  gpio_interrupts.c  gpio_interrupts.h  html_fragments.h  http.c  http.h  http_noncore.c  http_noncore.h  idf_component.yml  led.c  led.h  main.c  mdns_service.c  mdns_service.h  ota.c  ota.h  packet_types.h  pins.h  reset.c  reset.h  simple_ota_example.c  stats.c  stats.h  tashtalk.c  tashtalk.h  temperature.c  temperature.h  tunables.h  uart.c  uart.h  wifi.c
frontpanel/: PCB_CUTOUTS_easyeda.json  PCB_rackmackfront_easyeda.json  README.md
html_drafts/: index.html
hw/: PCB_PCB_LCBMC_2024-09-05.json
